--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
 @import "reset.css";
 @import "variables.css";
-@import "status-bar.css";
-@import "welcome-header.css";
-@import "login-form.css";
+
+/* Components */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screens/login.css";
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
