--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,6 +1,10 @@
 .status-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: flex;
-    padding: 5px 3px;
+    padding: 5px 10px;
+    box-sizing: border-box;
 }
 
 .status-bar__column {
