--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -29,10 +29,23 @@
     color: white;
     font-weight: 600;
     position: absolute;
-    bottom: 11px;
-    right: 38px;
+    bottom: 9px;
+    right: 40px;
 }
 
-.nav__btn:nth-child(2) {
+.nav__dot {
+    background-color: tomato;
+    width: 6px;
+    height: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    position: absolute;
+    bottom: 19px;
+    right: 45px;
+}
+
+.nav__btn:nth-child(even) {
     position: relative;
 }
