--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,6 +1,7 @@
-.friends-screen {
+.main-screen {
     margin: 10px var(--holizontal-space);
 }
+
 .user-component {
     display: flex;
     align-items: center;
@@ -14,14 +15,13 @@
 .user-component__column:last-child {
     width: 10%;
     text-align: end;
-    opacity: 0.6;
     font-size: 15px;
 }
 
 .user-component__avatar {
-    width: 70px;
-    height: 70px;
-    border-radius: 28px;
+    width: 68px;
+    height: 68px;
+    border-radius: 29px;
     margin-right: 15px;
 }
 
@@ -59,4 +59,28 @@
 .user-component__subtitle {
     font-size: 15px;
     opacity: 0.5;
+}
+
+.user-component__notification {
+    background-color: tomato;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+}
+
+.user-component__time {
+    opacity: 0.5;
+}
+
+.user-component__chat {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    height: 68px;
 }
