--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -13,3 +13,13 @@
 .screen-header__icons span {
     margin-left: 28px;
 }
+
+.screen-header__icons span:last-child {
+    position: relative;
+}
+
+.screen-header__dot {
+    position: absolute;
+    bottom: 25px;
+    left: -5px;
+}
