--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,12 @@
 @import "components/user-component.css";
 @import "components/notification.css";
 @import "components/dot.css";
+@import "components/boundary-line.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
