--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -30,3 +30,88 @@
     margin: 110px 0px;
     opacity: 0.6;
 }
+
+.open-post {
+    display: flex;
+}
+
+.open-post__title {
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.open-post__hashtags {
+    text-transform: uppercase;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    opacity: 0.6;
+}
+
+.open-post__members {
+    margin-top: 10px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.open-post__members img {
+    margin-right: 5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
+.open-post__member-count {
+    opacity: 0.5;
+    font-size: 15px;
+}
+
+.open-post__members .divider {
+    width: 1px;
+    height: 10px;
+    margin: 0 5px;
+    background-color:rgba(0, 0, 0, 0.3);
+}
+
+.open-post__member-status {
+    font-size: 16px;
+    color: deeppink;
+}
+
+.open-post__column:first-child {
+    width: 75%;
+    margin: 15px 0px;
+}
+
+.open-post__column:last-child img {
+    width: 105px;
+    height: 105px;
+    border-radius: 10px;
+}
+
+.open-post__column:last-child {
+    width: 25%;
+    text-align: end;
+    position: relative;
+}
+
+.open-post__heart-count {
+    position: absolute;
+    bottom: 10px;
+    right: 8px;
+    background-color:rgba(0, 0, 0, 0.5);
+    color:white;
+    font-size: 13px;
+    padding: 4px 10px;
+    border-radius: 10px;
+}
+
+.find-boundary-line {
+    display: flex;
+    justify-content: space-between;
+    opacity: 0.6;
+    font-size: 15px;
+    border-top: 1px solid rgba(220, 220, 220, 1);
+    margin: 12px 0;
+}
