--- a/css/components/icon-raw.css
+++ b/css/components/icon-raw.css
@@ -1,6 +1,7 @@
 .icon-raw {
     display: flex;
     margin: 30px 0px;
+    position: relative;
 }
 
 .icon-raw__icon {
@@ -16,7 +17,7 @@
 }
 
 .icon-raw__icon span {
-    margin-top: 30px;
+    margin-top: 25px;
     font-size: 15px;
     font-weight: 500;
 }
