--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -27,5 +27,11 @@
 
 .more-suggestions__icon span {
     font-size: 16px;
-    opacity: 0.6;
+    opacity: 0.8;
+}
+
+.more__dot {
+    position: absolute;
+    top: -30px;
+    left: 130px;
 }
