--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 @import "components/dot.css";
 @import "components/boundary-line.css";
 @import "components/icon-raw.css";
+@import "components/settings.css";
 
 /* Screens */
 @import "screens/login.css";
