--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -23,3 +23,17 @@
     bottom: 25px;
     left: -5px;
 }
+
+@keyframes rotateCog {
+    from {
+        transform: none;
+    }
+
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icons .fa-cog:hover {
+    animation: rotateCog 1s linear infinite;
+}
