--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -10,3 +10,27 @@
     opacity: 0.2;
 }
 
+@keyframes hideSplashScreen {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+#splash-screen {
+    background-color: var(--default-color);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 120px;
+    animation: hideSplashScreen 1s ease-in-out forwards;
+    animation-delay: 1s;
+}
