--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,6 +5,11 @@
     display: flex;
     padding: 5px 10px;
     box-sizing: border-box;
+    z-index: 3;
+}
+
+.status-bar-bc {
+    background-color: white;
 }
 
 .status-bar__column {
